5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1831_1645.log
== TEST (2019-06-13 16:18:06) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:42) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:14) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:20:07) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print(saques)
-- EXECUTION TIME:
0.989571
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
[2000 1500 2100 1500 3000 3200 1205 1800]
1
1
2
2
3
4
4
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
[2000 1500 2100 1500 3000]
1
1
2
2
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
[2000 1500 1950 1555 1999 2050 2560 2851 1500 3000]
1
1
1
1
1
2
3
4
4
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:33) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:56) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))

saques=0

print(v)

for i in range(size(v)):
	if (v[0] >= 2000):
		saques=saques+1
	print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:04) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saque=saque+1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:53) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:27) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:34) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:33) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		v[i]=v[saques]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:53) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		v[i]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:59) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		v[i]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:32) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:46:42) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)
-- EXECUTION TIME:
0.948608
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
[2000 1500 2100 1500 3000 3200 1205 1800]
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
[2000 1500 2100 1500 3000]
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
[2000 1500 1950 1555 1999 2050 2560 2851 1500 3000]
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:59) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:47:07) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)
-- EXECUTION TIME:
0.77621
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
[2000 1500 2100 1500 3000 3200 1205 1800]
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
[2000 1500 2100 1500 3000]
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
[2000 1500 1950 1555 1999 2050 2560 2851 1500 3000]
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:44) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)

for i in range(size(v)):
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:46) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)

for i in range(size(v)):
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:31) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

print(v)

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
print(saques)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:54) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:01) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
v1=zeros(size(v),dtype=int)
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)


	
-- EXECUTION TIME:
0.849031
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:17) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:24) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)


	
-- EXECUTION TIME:
0.940424
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:08) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:12) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)

v1=zeros(saque, dtype=int)

print(v1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:21) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)

v1=zeros(saques, dtype=int)

print(v1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:17) 
-- CODE:
from numpy import *

v=array(eval(input("Valores dos saques: ")))
saques=0

for i in range(size(v)):
	if (v[i] >= 2000):
		saques=saques+1
		
print(saques)

v1=zeros(saque, dtype=int)
saque=0
for i in range(size(v1))

print(v1)

	
-- ERROR:
File "XXXX", line 14
    for i in range(size(v1))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
